; ModuleID = '/home/carl/AnghaBench/freebsd/usr.sbin/ypldap/extr_ypldap.c_purge_config.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.sbin/ypldap/extr_ypldap.c_purge_config.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.env = type { i32 }
%struct.idm = type { i32 }

@idm_entry = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @purge_config(%struct.env* %0) #0 {
  %2 = alloca %struct.env*, align 8
  %3 = alloca %struct.idm*, align 8
  store %struct.env* %0, %struct.env** %2, align 8
  br label %4

4:                                                ; preds = %9, %1
  %5 = load %struct.env*, %struct.env** %2, align 8
  %6 = getelementptr inbounds %struct.env, %struct.env* %5, i32 0, i32 0
  %7 = call %struct.idm* @TAILQ_FIRST(i32* %6)
  store %struct.idm* %7, %struct.idm** %3, align 8
  %8 = icmp ne %struct.idm* %7, null
  br i1 %8, label %9, label %17

9:                                                ; preds = %4
  %10 = load %struct.env*, %struct.env** %2, align 8
  %11 = getelementptr inbounds %struct.env, %struct.env* %10, i32 0, i32 0
  %12 = load %struct.idm*, %struct.idm** %3, align 8
  %13 = load i32, i32* @idm_entry, align 4
  %14 = call i32 @TAILQ_REMOVE(i32* %11, %struct.idm* %12, i32 %13)
  %15 = load %struct.idm*, %struct.idm** %3, align 8
  %16 = call i32 @free(%struct.idm* %15)
  br label %4

17:                                               ; preds = %4
  ret void
}

declare dso_local %struct.idm* @TAILQ_FIRST(i32*) #1

declare dso_local i32 @TAILQ_REMOVE(i32*, %struct.idm*, i32) #1

declare dso_local i32 @free(%struct.idm*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
